# Interrog-A-I-tion

./: .gitignore  README.md  pyproject.toml
backend/: README.md
config/: README.md  bridged-ai-developer.ps1.example  local-ai-developer.ps1.example
data/: README.md
docs/: 00-vision-and-scope.md  00-wizja-i-zakres.md  01-mvp-requirements.md  01-wymagania-mvp.md  02-architektura-lokalna.md  02-local-architecture.md  03-bezpieczenstwo-i-prywatnosc.md  03-security-and-privacy.md  04-interview-methodology-and-ai.md  04-metodyka-przesluchania-i-ai.md  05-plan-pracy-magisterskiej.md  05-thesis-plan.md  06-dane-i-ewaluacja.md  06-data-and-evaluation.md  07-ethical-and-legal-risks.md  07-ryzyka-etyczne-i-prawne.md  08-product-roadmap.md  08-wariant-2-roadmapa.md  09-investigative-interviewing-psychology.md  09-psychologia-przesluchaniowa.md  10-ai-prompts-and-guardrails.md  10-ai-prompty-i-guardrails.md  11-repository-structure.md  11-struktura-repozytorium.md  12-glossary.md  12-slownik-pojec.md  13-initial-sources.md  13-zrodla-startowe.md  14-stos-technologiczny.md  14-technology-stack.md  15-github-publication.md  15-publikacja-github.md  16-language-and-localization.md  17-product-strategy.md  18-credibility-indicators-governance.md  19-implementation-backlog.md  20-milestone-gates.md  21-derived-assumptions-and-work-packages.md  22-architecture-diagram.md  23-brand.md  (+2 more)
frontend/: README.md
locales/: README.md
prompts/: README.md  consistency_review.system.md  followup_questions.system.md  grounded_followup_questions.system.md  interview_plan.system.md
(+212 files in other folders)
