[project]
name = "interigaition"
version = "0.1.0"
description = "Local AI-assisted investigative interviewing prototype."
requires-python = ">=3.11"
readme = "README.md"
authors = [
  { name = "InterigA(I)tion research project" }
]

[tool.pytest.ini_options]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "backend"

